Pretty much finished...

--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -18,8 +18,8 @@
     <body>
 
         <div id="Page" class="center" style="">
-            <h1></h1>
-			<img src="image.php" style=""/>
+            <h1 id="part"></h1>
+			<img id="prev" src="image.php" style=""/>
             <canvas id="canvas1" width="800" height="600" ></canvas>
             <br/>
             <ul id="colors">
@@ -50,6 +50,25 @@
         </div>
 <div id="waitForDraw" style="">Waiting for your friend to draw their image.</div>
 <div id="waitForFriend" style="">Waiting for your a friend to join.</div>
+
+<div id="images">
+	<img id="img_1" src= "" />
+	<img id="img_2" src= "" />
+	<img id="img_3" src= "" />
+	<img id="img_4" src= "" />
+	<img id="img_5" src= "" />
+	<img id="img_6" src= "" />
+</div>
+
+
+
+
+
+
+
+
+
+
 <!--<script type="text/javascript">
 
   var _gaq = _gaq || [];
